force-app/main/default/objects/Catalogo__c/fields/Clases__c.field-meta.xml
<CustomField>
    <fullName>Clases__c</fullName>
    <description>Clases de productos</description>
    <label>Clases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>