force-app/main/default/objects/Catalogo__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente a quien se le comparte el catalogo a traves de un enlace personalizado</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Catalogos</relationshipLabel>
    <relationshipName>Catalogos</relationshipName>
    <type>Lookup</type>
</CustomField>