force-app/main/default/objects/Catalogo__c/fields/Familias__c.field-meta.xml
<CustomField>
    <fullName>Familias__c</fullName>
    <description>Clasificacion de producto por familias</description>
    <label>Familias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>