force-app/main/default/objects/Catalogo__c/fields/Portal_Token__c.field-meta.xml
<CustomField>
    <fullName>Portal_Token__c</fullName>
    <description>Token personalizado para acceso al catalogo</description>
    <label>Portal Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>